--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ body {
 
 #conteudo {
     display: grid;
+    grid-template-columns: auto auto;
+    column-gap: -1rem;
 
     margin: auto;
     margin-top: 0.3rem;
@@ -36,6 +38,7 @@ body {
     width: 49rem;
     height: 42.0rem;
     background-color: #65AFFF;
+
 }
 
 #rodape {
@@ -62,6 +65,8 @@ body {
     height: 15rem;
     background-color: #1b2845;
     margin: 3px;
+    margin-top: 2.9rem;
+    margin-left: 4.5rem;
 }
 
 .caixa_topo {
