--- a/style.css
+++ b/style.css
@@ -57,7 +57,10 @@ body {
     text-align: center;
 }
 
-
+img {
+    width: 15rem;
+    height: 10.5rem;
+}
 .caixa{
     border: 3px solid black;
     border-radius: 5px;
