--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 body {
     background-color:#274060;
 }
-#corpo{
+main {
     margin: auto;
     border: 3px solid black;
     border-radius: 5px;
     width: 50rem;
-    height: 55rem;
+    height: 58rem;
     background-color: #1b2845;
 }
 
-#topo{
+header{
     border: 3px solid #5591d6;
     background-color: #5899e2;
     border-radius: 5px;
@@ -20,13 +20,41 @@ body {
     margin-top: 0.3rem;
 }
 
+nav {
+  width: 49rem;
+  height: 2rem;
+  margin: auto;
+  margin-top: 0.3rem;
+  border: 3px solid #141d31;
+  border-radius:5px;
+  background-color: #141d31;
+  display: flex;
+  justify-content: space-around;
+}
+
+nav > a {
+  color: white;
+  text-decoration: none;
+  width: 90%;
+  height: 100%;
+  text-align: center;
+  
+}
+
+nav > a:hover {
+  background-color: lightskyblue;
+  width: 90%;
+  height:100%;
+  text-align: center;
+  color: #141d31;
+}
 .titulo{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
     color: white;
 }
 
-#conteudo {
+section {
     display: grid;
     grid-template-columns: auto auto;
     column-gap: -1rem;
@@ -41,7 +69,7 @@ body {
 
 }
 
-#rodape {
+footer {
     margin: auto;
     margin-top: 0.3rem;
     border: 3px solid black;
@@ -67,6 +95,8 @@ img {
     width: 15rem;
     height: 15rem;
     background-color: #1b2845;
+    color: white;
+    text-align: center;
     margin: 3px;
     margin-top: 2.9rem;
     margin-left: 4.5rem;
